--- a/style.css
+++ b/style.css
@@ -154,16 +154,19 @@
 	font-family:'Roboto','Helvetica','Arial',sans-serif;
 	color:rgba(0,0,0,.87);
 	z-index:999999;
+	touch-action:manipulation;
 	background:white;
 }
 
 .dialog.dialog-wide {
 	width:560px;
 	margin-left:-280px;
+	touch-action:manipulation;
 }
 
 .dialog .dialog-inner {
 	padding:24px;
+	touch-action:manipulation;
 }
 
 .dialog .dialog-inner .dialog-title {
@@ -171,20 +174,24 @@
 	font-weight:500;
 	font-size:20px;
 	line-height:24px;
+	touch-action:manipulation;
 }
 
 .dialog .dialog-inner .dialog-content {
 	font-size:15px;
 	line-height:22px;
+	touch-action:manipulation;
 }
 
 .dialog .dialog-actions {
 	padding:13px;
+	touch-action:manipulation;
 }
 
 .dialog .dialog-actions button {
 	color:#2196F3;
 	float:right;
+	touch-action:manipulation;
 }
 
 .dialog .dialog-battle {
@@ -197,40 +204,48 @@
 	position:relative;
 	top:2px;
 	left:2px;
+	touch-action:manipulation;
 }
 
 .mdl-button.button-left {
 	float:left !important; 
+	touch-action:manipulation;
 }
 
 #modal, .dialog {
 	display:none;
+	touch-action:manipulation;
 }
 
 #battle-div {
 	position:relative;
 	height:160px;
 	margin-top:10px;
+	touch-action:manipulation;
 }
 
 #player-div {
 	position:absolute;
 	left:0;
+	touch-action:manipulation;
 }
 
 #enemy-div {
 	position:absolute;
 	right:0;
 	text-align:right;
+	touch-action:manipulation;
 }
 
 #player-anim, #enemy-anim {
 	position:relative;
+	touch-action:manipulation;
 }
 
 #enemy-anim {
     float: right;
     display: block;
+    touch-action:manipulation;
 }
 
 .health-bar {
@@ -238,6 +253,7 @@
 	height:5px;
 	background:#5f5;
 	margin-bottom:15px;
+	touch-action:manipulation;
 }
 
 .mdl-card__supporting-text {
